fix overlap

--- a/style.css
+++ b/style.css
@@ -21,3 +21,17 @@ body{
     margin:20vh auto;
     background-color: aliceblue;
 }
+
+.randNum{
+    position: absolute;
+    margin:1px;
+    border: 1px solid black;
+    border-radius: 50%;
+    font-size: 1.5rem;
+    
+    
+    width: 35px;
+    height: 35px;
+    line-height: 1.5;
+    text-align: center;
+}
